[package]
name = "comic_cron"
version = "0.1.0"
authors = ["Mackenzie Armstrong <jearmstrong21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
scraper = "0.12.0"
ego-tree = "0.6.2"
#sxd-document = "0.3.2"
#sxd-xpath = "0.4.2"