[package]
name = "comic_cron"
version = "0.1.0"
authors = ["Mackenzie Armstrong <jearmstrong21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
macky_xml = { path = "../macky_xml" }
url = "2.2.0"